Fixed layout covered by browser interface
Changed viewport based size to percent, with fixed position.

--- a/res/style.css
+++ b/res/style.css
@@ -1,6 +1,9 @@
 body {
     margin: 0;
     overflow: hidden;
+    position: fixed;
+    width: 100%;
+    height: 100%;
 }
 
 iframe,
@@ -29,8 +32,8 @@ header button, #helpForm .modal-body button {
 }
 
 iframe#mapBox {
-    width: 100vw;
-    height: calc(100vh - 46px);
+    width: 100%;
+    height: calc(100% - 46px);
 }
 
 footer {
